修改bug以及调整问题

--- a/1/new_hospital/foot.html
+++ b/1/new_hospital/foot.html
@@ -65,7 +65,7 @@
                         <i class="iconfont" style="margin-right: 10px;">
                             
                         </i>
-                        北京市海淀区花园路5号5幢(天博中润）2层221室
+                        北京市海淀区花园路5号5幢 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(天博中润)2层221室
                     </p>
                 </div>
                 <div class="qrCode_wrap">
