--- a/1/new_hospital/head.html
+++ b/1/new_hospital/head.html
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="nav">
         <div class="left">
-            <div class="logo">
+            <div class="logo" @click="gotoHref('{ms:global.url/}/index.html')">
                 <img src="{ms:global.host/}/{ms:global.style/}/images/logo.png" alt="">
             </div>
         </div>
